added submit_merchant_config function
